fix: home container gap fixed

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -4,7 +4,7 @@
 .home_container {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+
   section {
     display: flex;
     flex-direction: column;
@@ -70,7 +70,7 @@
   .home_container {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 10px;
 
     .productos_section {
       flex-wrap: wrap;
